[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Enemy/Effect/TeleportEffectScript.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.298077 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 5.0
orbit_velocity_random = 1.0
angle = 45.0
angle_random = 1.0
scale = 3.0
scale_curve = SubResource( 2 )
color = Color( 0.219608, 1, 0, 1 )

[sub_resource type="Animation" id=4]
resource_name = "vanished"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.19689 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="TeleportEffect" type="Particles2D"]
emitting = false
amount = 200
process_material = SubResource( 3 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/vanished = SubResource( 4 )

[node name="TimerNode" type="Node" parent="."]

[node name="SpawnEnemyTimer" type="Timer" parent="TimerNode"]
process_mode = 0
wait_time = 2.0

[node name="VanishedTimer" type="Timer" parent="TimerNode"]
process_mode = 0
[connection signal="timeout" from="TimerNode/SpawnEnemyTimer" to="." method="_on_SpawnEnemyTimer_timeout"]
[connection signal="timeout" from="TimerNode/VanishedTimer" to="." method="_on_VanishedTimer_timeout"]
